--- a/.drone.yml
+++ b/.drone.yml
@@ -88,7 +88,7 @@ steps:
       from_secret: docker_username
     password:
       from_secret: docker_password
-    repo: yuknak/snn
+    repo: yuknak/vnn
     tags: 1.0.4
 
 - name: slack
