--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -128,11 +128,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "biz.tetraserve.snncli"
+        applicationId "biz.tetraserve.vnncli"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 180
-        versionName "1.0.4"
+        versionName "1.0.1"
     }
     splits {
         abi {
