--- a/mobile/ios/vnncli/Info.plist
+++ b/mobile/ios/vnncli/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>SUPERNN</string>
+	<string>ﾍﾞﾄﾅﾑ情報ｱﾝﾃﾅ</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
